Jump to Java 21, now it works out of the box